force-app/main/default/objects/FormatValue__c/FormatValue__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FormatValue</label>
</CustomObject>