force-app/main/default/objects/FormatValue__c/fields/Currency_0__c.field-meta.xml
<CustomField>
    <fullName>Currency_0__c</fullName>
    <label>Currency_0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>