force-app/main/default/objects/FormatValue__c/fields/Currency_1__c.field-meta.xml
<CustomField>
    <fullName>Currency_1__c</fullName>
    <label>Currency_1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>