force-app/main/default/objects/FormatValue__c/fields/Currency_2__c.field-meta.xml
<CustomField>
    <fullName>Currency_2__c</fullName>
    <label>Currency_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>