force-app/main/default/objects/FormatValue__c/fields/Number_1__c.field-meta.xml
<CustomField>
    <fullName>Number_1__c</fullName>
    <label>Number_1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>