force-app/main/default/objects/FormatValue__c/fields/Number_2__c.field-meta.xml
<CustomField>
    <fullName>Number_2__c</fullName>
    <label>Number_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>