force-app/main/default/objects/FormatValue__c/fields/Number_3__c.field-meta.xml
<CustomField>
    <fullName>Number_3__c</fullName>
    <label>Number_3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>